# golang-container-bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod
container/: BUILD
server/: BUILD  server.go
